# donos

./: .gitignore  README.md  skills-lock.json
.claude/: MEMORY.md
.claude/skills/: donation-chain-implementation.md  frontend-conventions.md
backend/: .env.example  .gitignore  pyproject.toml
backend/app/: bootstrap.py  cli.py  config.py  dependencies.py  main.py  repositories.py
backend/app/models/: __init__.py  domain.py
backend/app/routers/: __init__.py  donations.py  donors.py  ngos.py  wallet.py
backend/app/schemas/: __init__.py  api.py  donation.py  donor.py  ngo.py  ngo_transaction.py
backend/app/services/: __init__.py  donation_processor.py  donation_service.py  ngo_service.py  operations.py  poller.py  rating_service.py  supabase.py  xaman.py
backend/app/services/xrpl/: __init__.py  accounts.py  client.py  tokens.py  transactions.py
backend/scripts/: fund_wallet_rlusd.py  real_transactions.json  seed_real_transactions.py  setup_ngo_wallets.py  wallet_setup_output.json
backend/tests/: test_api.py  test_cli.py  test_config.py  test_donation_processor.py
docs/: business-analysis.md
docs/architecture/: donation-infrastructure.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Navbar.tsx
frontend/src/contexts/: WalletContext.tsx
frontend/src/hooks/: useWallet.ts
frontend/src/pages/: AppView.tsx  Connect.tsx  Dashboard.tsx  Donate.tsx  Home.tsx  Initiative.tsx  Landing.tsx  NGOProfile.tsx  Profile.tsx
frontend/src/types/: index.ts
frontend/src/utils/: api.ts  (+1 more)
(+5 files in other folders)
